--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- IE Compatibility -->
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <!-- <script src="env.js"></script> -->
+  <!-- <script src="/env.js"></script> -->
 </head>
 <body>
   <div id="root"></div>
